--- a/web/src/app/components/rbac/permission-form/rbac-permission-form.component.scss
+++ b/web/src/app/components/rbac/permission-form/rbac-permission-form.component.scss
@@ -1,23 +1,39 @@
+:host {
+  width: 100%;
+}
+
 .adcm-rbac-permission {
   display: flex;
   width: 100%;
+  height: 100%;
   box-sizing: border-box;
-  padding: 16px;
+  padding: 8px;
 
   &__filter {
     display: flex;
     width: 120px;
     padding-right: 16px;
+  }
 
-    .mat-chip-list-stacked {
-      width: 100%;
+  &__filter-category.mat-chip-list-stacked {
+    width: 100%;
 
-      .mat-standard-chip {
-        margin-left: 0;
-        margin-right: 0;
-        justify-content: center;
+    ::ng-deep {
+      .mat-chip-list-wrapper {
+        height: 100%;
+        box-sizing: border-box;
+        padding-right: 8px;
+        padding-left: 8px;
+        overflow-y: auto;
+        flex-wrap: nowrap;
       }
     }
+  }
+
+  &__filter-category-item {
+    margin-left: 0;
+    margin-right: 0;
+    justify-content: center;
   }
 
   &__options {
@@ -25,9 +41,21 @@
     flex-direction: column;
     flex: 1;
     padding-left: 8px;
+    height: 100%;
+    overflow: hidden;
 
     adwp-selection-list {
       width: 100%;
+      height: 100%;
+      overflow: hidden;
+      margin-bottom: 8px;
+
+      ::ng-deep {
+        .mat-selection-list {
+          height: 100%;
+          overflow-y: auto;
+        }
+      }
     }
   }
 }
