ADCM-2270 it is adds params(filters) for the rbac permissions requests

--- a/web/src/app/components/rbac/permission-form/rbac-permission-form.component.scss
+++ b/web/src/app/components/rbac/permission-form/rbac-permission-form.component.scss
@@ -25,6 +25,7 @@
         padding-right: 8px;
         padding-left: 8px;
         overflow-y: auto;
+        overflow-x: hidden;
         flex-wrap: nowrap;
       }
     }
