--- a/web/src/app/components/rbac/permission-form/rbac-permission-form.component.html
+++ b/web/src/app/components/rbac/permission-form/rbac-permission-form.component.html
@@ -1,11 +1,12 @@
 <div class="adcm-rbac-permission">
   <div class="adcm-rbac-permission__filter">
-    <mat-chip-list class="adcm-rbac-permission__filter-category mat-chip-list-stacked" multiple selectable>
+    <mat-chip-list class="adcm-rbac-permission__filter-category mat-chip-list-stacked"
+                   multiple selectable
+                   (valueChange)="updateFilter('category', $event)">
       <mat-chip class="adcm-rbac-permission__filter-category-item" #chip="matChip"
                 *ngFor="let category of ['*', 'adcm']"
-                (click)="chip.selected = !chip.selected"
-      >
-        {{category}}
+                (click)="chip.toggleSelected(true)">
+        {{ category }}
       </mat-chip>
     </mat-chip-list>
   </div>
@@ -19,6 +20,7 @@
       multiple
       [handler]="nameHandler"
       [options]="options | adwpFilter:matcher:form.controls[controlName].value:idHandler"
+      (filter)="updateFilter('name', $event)"
       (ngModelChange)="value = $event"
     ></adwp-selection-list>
 
