--- a/web/src/app/components/rbac/permission-form/rbac-permission-form.component.html
+++ b/web/src/app/components/rbac/permission-form/rbac-permission-form.component.html
@@ -3,7 +3,7 @@
     <mat-chip-list class="adcm-rbac-permission__filter-category mat-chip-list-stacked"
                    multiple selectable
                    (valueChange)="updateFilter('category', $event)">
-      <mat-chip class="adcm-rbac-permission__filter-category-item" #chip="matChip"
+      <mat-chip class="adcm-rbac-permission__filter-category-item" #chip="matChip" color="accent"
                 *ngFor="let category of ['*', 'adcm']"
                 (click)="chip.toggleSelected(true)">
         {{ category }}
