--- a/web/src/app/components/rbac/policy-form/rbac-policy-form.component.html
+++ b/web/src/app/components/rbac/policy-form/rbac-policy-form.component.html
@@ -2,17 +2,13 @@
   <mat-horizontal-stepper formArrayName="steps" linear #stepper>
     <mat-step *ngIf="step(0) as step1" formGroupName="0" [stepControl]="step1">
       <ng-template matStepLabel>Step 1</ng-template>
-      <adwp-input [form]="step1" controlName="name" label="Policy name"></adwp-input>
-      <adwp-input [form]="step1" controlName="description" label="Description"></adwp-input>
-      <!--      <adwp-input-select [form]="step1" [multiple]="false" label="Role" controlName="role" [options]="options"></adwp-input-select>-->
-      <!--      <adwp-input-select [form]="step1" label="User" controlName="user" [options]="options"></adwp-input-select>-->
-      <!--      <adwp-input-select [form]="step1" label="Group" controlName="group" [options]="options"></adwp-input-select>-->
+      <app-rbac-policy-form-step-one [form]="step1"></app-rbac-policy-form-step-one>
       <div>
         <button mat-button matStepperNext>Next</button>
       </div>
     </mat-step>
     <mat-step *ngIf="step(1) as step2" formGroupName="1" [stepControl]="step2" label="Step 2">
-      <!--      <adwp-input-select [form]="step2" label="Object" controlName="object" [options]="options"></adwp-input-select>-->
+      <app-rbac-policy-form-step-two [form]="step2"></app-rbac-policy-form-step-two>
       <div>
         <button mat-button matStepperPrevious>Back</button>
         <button mat-button matStepperNext>Next</button>
@@ -20,11 +16,10 @@
     </mat-step>
     <mat-step>
       <ng-template matStepLabel>Done</ng-template>
-      <p>You are now done.</p>
+      <app-rbac-policy-form-step-three [form]="form"></app-rbac-policy-form-step-three>
 
       <div>
         <adwp-controls [disabled]="!form.valid" (cancel)="onCancel()" (save)="save()"></adwp-controls>
-
       </div>
     </mat-step>
   </mat-horizontal-stepper>
