ADCM-2269 FIXED: error in runtime with wrong array operations

--- a/web/src/app/components/rbac/group-form/rbac-group-form.component.html
+++ b/web/src/app/components/rbac/group-form/rbac-group-form.component.html
@@ -4,6 +4,6 @@
   <adwp-input-select [form]="form" label="Select users" controlName="user" [handler]="users.label"
                      appRbacUsersAsOptions
                      #users="rbacUsers"
-                     [options]="users.options$ | async"></adwp-input-select>
+                     [options]="users.options$ | async | falseAsEmptyArray"></adwp-input-select>
   <adwp-controls [title]="title" [disabled]="!form.valid" (cancel)="onCancel()" (save)="save()"></adwp-controls>
 </ng-container>
