--- a/web/src/app/shared/form-elements/adcm-input-rbac-permission/adcm-input-rbac-permission.component.html
+++ b/web/src/app/shared/form-elements/adcm-input-rbac-permission/adcm-input-rbac-permission.component.html
@@ -25,7 +25,7 @@
           </button>
         </div>
 
-        <ng-container *ngIf="selectedPermissions | adwpFilter:matcher:chipListInput.value:nameHandler as selected">
+        <ng-container *ngIf="selectedPermissions | falseAsEmptyArray | adwpFilter:matcher:chipListInput.value:nameHandler as selected">
           <ng-container *ngIf="!!selectedPermissions?.length && !selected?.length">
             <span class="warn">Nothing found</span>
           </ng-container>
