--- a/web/src/app/components/rbac/policy-form/rbac-policy-form.component.html
+++ b/web/src/app/components/rbac/policy-form/rbac-policy-form.component.html
@@ -1,10 +1,10 @@
 <ng-container [formGroup]="form">
-  <mat-horizontal-stepper formArrayName="steps" linear #stepper>
+  <mat-horizontal-stepper formArrayName="steps" linear>
     <mat-step *ngIf="step(0) as step1" formGroupName="0" [stepControl]="step1">
       <ng-template matStepLabel>Step 1</ng-template>
       <app-rbac-policy-form-step-one [form]="step1"></app-rbac-policy-form-step-one>
       <div>
-        <button mat-button matStepperNext>Next</button>
+        <button mat-raised-button matStepperNext color="accent">Next</button>
       </div>
     </mat-step>
     <mat-step *ngIf="step(1) as step2" formGroupName="1" [stepControl]="step2" label="Step 2">
