ADCM-2269 it is adds the first step of policy form

--- a/web/src/app/components/rbac/policy-form/rbac-policy-form-step-one/rbac-policy-form-step-one.component.html
+++ b/web/src/app/components/rbac/policy-form/rbac-policy-form-step-one/rbac-policy-form-step-one.component.html
@@ -18,6 +18,9 @@
         </mat-option>
       </ng-container>
     </mat-select>
+    <mat-error *ngIf="isError('role')">
+      <mat-error *ngIf="hasError('required')">Role is required.</mat-error>
+    </mat-error>
   </mat-form-field>
 </div>
 
