--- a/web/src/app/components/rbac/policy-form/rbac-policy-form.component.html
+++ b/web/src/app/components/rbac/policy-form/rbac-policy-form.component.html
@@ -11,7 +11,7 @@
       <app-rbac-policy-form-step-two [form]="step2"></app-rbac-policy-form-step-two>
       <div>
         <button mat-button matStepperPrevious>Back</button>
-        <button mat-button matStepperNext>Next</button>
+        <button mat-raised-button matStepperNext color="accent">Next</button>
       </div>
     </mat-step>
     <mat-step>
