--- a/web/src/app/components/rbac/policy-form/rbac-policy-form.component.html
+++ b/web/src/app/components/rbac/policy-form/rbac-policy-form.component.html
@@ -1,5 +1,5 @@
 <ng-container [formGroup]="form">
-  <mat-horizontal-stepper formArrayName="steps" linear>
+  <mat-horizontal-stepper formArrayName="steps" linear [disableRipple]="true" [@.disabled]="true">
     <mat-step *ngIf="step(0) as step1" formGroupName="0" [stepControl]="step1">
       <ng-template matStepLabel>Step 1</ng-template>
       <app-rbac-policy-form-step-one [form]="step1"></app-rbac-policy-form-step-one>
