--- a/web/src/app/admin/groups/groups.component.html
+++ b/web/src/app/admin/groups/groups.component.html
@@ -1,5 +1,5 @@
 <div class="controls">
-  <app-add-button class="add-button">
+  <app-add-button class="add-button" [dialogConfig]="dialogConfig">
     Create {{ type }}
   </app-add-button>
   <button mat-raised-button color="primary" (click)="deleteEntities()" [disabled]="!(data$ | async | hasSelected)">
