--- a/web/src/app/shared/form-elements/adcm-input-rbac-permission/adcm-input-rbac-permission.component.scss
+++ b/web/src/app/shared/form-elements/adcm-input-rbac-permission/adcm-input-rbac-permission.component.scss
@@ -64,9 +64,17 @@
   &__permission-form-wrapper {
     display: flex;
     width: 100%;
+    height: 100%;
     flex: 1;
     overflow: hidden;
-    height: 320px;
+
+    ::ng-deep > * {
+      display: flex;
+      width: 100%;
+      flex: 1;
+      overflow: hidden;
+      height: 260px;
+    }
   }
 
 }
