--- a/web/src/app/components/rbac/group-form/rbac-group-form.component.html
+++ b/web/src/app/components/rbac/group-form/rbac-group-form.component.html
@@ -5,5 +5,6 @@
                      appRbacUsersAsOptions
                      #users="rbacUsers"
                      [options]="users.options$ | async | falseAsEmptyArray"></adwp-input-select>
-  <adwp-controls [title]="title" [disabled]="!form.valid" (cancel)="onCancel()" (save)="save()"></adwp-controls>
+  <adwp-controls [title]="title" [disabled]="form.invalid || form.pristine" (cancel)="onCancel()"
+                 (save)="save()"></adwp-controls>
 </ng-container>
