--- a/web/src/app/components/rbac/permission-form/rbac-permission-form.component.scss
+++ b/web/src/app/components/rbac/permission-form/rbac-permission-form.component.scss
@@ -1,15 +1,28 @@
 :host {
   width: 100%;
-  background-color: #303030;
-  border: 1px solid #585858;
 }
 
 .adcm-rbac-permission {
   display: flex;
+  flex-direction: column;
   width: 100%;
   height: 100%;
-  box-sizing: border-box;
-  padding: 8px;
+
+  &__wrapper {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    background-color: #303030;
+    border: 1px solid #585858;
+    padding: 8px;
+    box-sizing: border-box;
+    overflow: hidden;
+  }
+
+  &__label {
+    color: rgba(255, 255, 255, 0.7);
+    margin-bottom: 4px;
+  }
 
   &__filter {
     display: flex;
