--- a/web/src/app/components/rbac/group-form/rbac-group-form.component.html
+++ b/web/src/app/components/rbac/group-form/rbac-group-form.component.html
@@ -1,10 +1,13 @@
 <ng-container [formGroup]="form">
   <adwp-input [form]="form" label='Group name' controlName='name'></adwp-input>
   <adwp-input [form]="form" label='Description' controlName='description'></adwp-input>
-  <adwp-input-select [form]="form" label="Select users" controlName="user" [handler]="users.label"
-                     appRbacUsersAsOptions
+  <adwp-input-select [form]="form" label="Select users" controlName="user"
                      #users="rbacUsers"
-                     [options]="users.options$ | async | falseAsEmptyArray"></adwp-input-select>
+                     [handler]="users.label"
+                     [rbac-users-as-options]="filter"
+                     [options]="users.options$ | async | falseAsEmptyArray"
+                     (filter)="updateFilter('name', $event)"
+  ></adwp-input-select>
   <adwp-controls [title]="title" [disabled]="form.invalid || form.pristine" (cancel)="onCancel()"
                  (save)="save()"></adwp-controls>
 </ng-container>
