--- a/web/src/app/components/rbac/user-form/rbac-user-form.component.html
+++ b/web/src/app/components/rbac/user-form/rbac-user-form.component.html
@@ -11,10 +11,14 @@
   <adwp-input [form]="userForm" label='First name' controlName='first_name'></adwp-input>
   <adwp-input [form]="userForm" label='Last name' controlName='last_name'></adwp-input>
   <adwp-input [form]="userForm" label='Email' controlName='email'></adwp-input>
-  <adwp-input-select [form]="userForm" label="Select groups" controlName="group" [handler]="groups.label"
-                     appRbacGroupsAsOptions
+  <adwp-input-select [form]="userForm" label="Select groups" controlName="group"
                      #groups="rbacGroups"
-                     [options]="groups.options$ | async | falseAsEmptyArray"></adwp-input-select>
+                     [handler]="groups.label"
+                     [rbac-groups-as-options]="filter"
+                     [options]="groups.options$ | async | falseAsEmptyArray"
+                     (filter)="updateFilter('name', $event)"
+
+  ></adwp-input-select>
   <adwp-controls [title]="title" [disabled]="form.invalid || form.pristine" (cancel)="onCancel()"
                  (save)="save()"></adwp-controls>
 </form>
