ADCM-2438 FIXED: Search doesn't work in the RBAC forms

--- a/web/src/app/components/rbac/group-form/rbac-group-form.component.html
+++ b/web/src/app/components/rbac/group-form/rbac-group-form.component.html
@@ -6,7 +6,7 @@
                      [handler]="users.label"
                      [rbac-users-as-options]="filter"
                      [options]="users.options$ | async | falseAsEmptyArray"
-                     (filter)="updateFilter('name', $event)"
+                     (filter)="updateFilter('search', $event)"
   ></adwp-input-select>
   <adwp-controls [title]="title" [disabled]="form.invalid || form.pristine" (cancel)="onCancel()"
                  (save)="save()"></adwp-controls>
