--- a/web/src/app/components/rbac/role-form/rbac-role-form.component.html
+++ b/web/src/app/components/rbac/role-form/rbac-role-form.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="form" [formGroup]="form">
-  <adwp-input [form]="form" label='Role name' controlName='name'></adwp-input>
+  <adwp-input [form]="form" label='Role name' controlName='display_name'></adwp-input>
   <adwp-input [form]="form" label='Description' controlName='description'></adwp-input>
   <adcm-input-rbac-permission [form]="form" label='Permissions' controlName='child'
                               [readonly]="value?.built_in"
