ADCM-2270 modify policy dialog

--- a/web/src/app/components/rbac/policy-form/rbac-policy-form-step-one/rbac-policy-form-step-one.component.html
+++ b/web/src/app/components/rbac/policy-form/rbac-policy-form-step-one/rbac-policy-form-step-one.component.html
@@ -7,6 +7,7 @@
     <mat-select
       [formControl]="form.controls['role']"
       placeholder="Role"
+      [compareWith]="comparator"
       (selectionChange)="roleChanged.emit()">
       <mat-option>
         <ngx-mat-select-search noEntriesFoundLabel="No options available" placeholderLabel="Select role"
